Добавлены первоначальный экраны, описан роутинг, добавлен .env

--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -8,5 +8,7 @@
   "cancel": "Отмена",
   "logout": "Выйти",
   "continue_label": "Продолжить",
-  "email": "Электронная почта"
+  "email": "Электронная почта",
+  "unknown_error": "Неизвестная ошибка",
+  "retry": "Повторить"
 }
