Добавил bloc для внутренних уведомлений

--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -15,5 +15,6 @@
   "retry": "Повторить",
   "profile": "Профиль",
   "products": "Продукты",
-  "users": "Пользователи"
+  "users": "Пользователи",
+  "retry": "Повторить"
 }
