работа с users->presentaion

--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -16,5 +16,8 @@
   "profile": "Профиль",
   "products": "Продукты",
   "users": "Пользователи",
-  "retry": "Повторить"
+  "retry": "Повторить",
+  "firstname": "Имя",
+  "lastname": "Фамилия",
+  "phone": "Телефон"
 }
