--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -6,6 +6,8 @@
   "no": "Нет",
   "close": "Закрыть",
   "register_title": "Регистрация",
+  "login": "Логин",
+  "password": "Пароль",
   "login_action": "Войти",
   "cancel": "Отмена",
   "logout": "Выйти",
@@ -22,5 +24,6 @@
   "phone": "Телефон",
   "title": "Название",
   "category": "Категория",
-  "description": "Описание"
+  "description": "Описание",
+  "validation_not_empty": "Поле не должно быть пустым"
 }
