добавил стоимость товара

--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -33,5 +33,13 @@
         "type": "int"
       }
     }
+  },
+  "price_usd": "{price} USD",
+  "@price_usd": {
+    "placeholders": {
+      "price": {
+        "type": "double"
+      }
+    }
   }
 }
