--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -16,7 +16,7 @@
   "unknown_error": "Неизвестная ошибка",
   "retry": "Повторить",
   "profile": "Профиль",
-  "products": "Продукты",
+  "products": "Товары",
   "users": "Пользователи",
   "retry": "Повторить",
   "firstname": "Имя",
