--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -17,6 +17,7 @@
   "retry": "Повторить",
   "profile": "Профиль",
   "products": "Товары",
+  "product": "Товар",
   "users": "Пользователи",
   "retry": "Повторить",
   "firstname": "Имя",
