--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -72,5 +72,6 @@
       }
     }
   },
-  "products_in_cart": "Товаров в корзине"
+  "products_in_cart": "Товаров в корзине",
+  "nothing_found": "По вашему запросу ничего не найдено"
 }
