Добавил подробный состав корзины

--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -73,5 +73,10 @@
     }
   },
   "products_in_cart": "Товаров в корзине",
-  "nothing_found": "По вашему запросу ничего не найдено"
+  "nothing_found": "По вашему запросу ничего не найдено",
+  "price": "Цена:",
+  "total_price": "Стоимость:",
+  "cart_detail": "Состав корзины",
+  "count": "Количество:",
+  "pcs": " шт."
 }
