--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -24,7 +24,7 @@
   "lastname": "Фамилия",
   "personal_data": "Личные данные",
   "phone": "Телефон",
-  "title": "Название",
+  "title": "Наименование",
   "category": "Категория",
   "description": "Описание",
   "address": "Адрес",
